--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon back-end/server.js"
+    "server": "nodemon back-end/server.js",
+    "start": "node back-end/server.js",
+    "build":"npm install && npm install --prefix font-end && npm run build --prefix font-end"
   },
   "type": "module",
   "keywords": [],
